--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,6 @@ Metrics/BlockLength:
   Max: 30
   Exclude:
     - 'spec/**/*'
-
+    - 'config/routes.rb'
 Naming/VariableNumber:
   Enabled: false
