--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_HOST_AUTH_METHOD: "trust"
+  redis:
+    image: redis:7
+    ports:
+      - '127.0.0.1:6379:6379'
+    container_name: redis_math_trainer
