--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,10 @@
 inherit_from: .rubocop_todo.yml
 
+require:
+  - rubocop-capybara
+  - rubocop-rails
+  - rubocop-rspec
+
 AllCops:
   Exclude:
     - 'bin/*'
