--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,13 @@ databases:
   - name: math_trainer_db
     databaseName: math_trainer
     user: math_trainer
+    plan: free
 
 services:
   - type: web
     name: math_trainer
     runtime: ruby
+    plan: free
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
