--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -6,46 +6,20 @@
 # Note that changes in the inspected code, or installation of new
 # versions of RuboCop, may require this file to be generated again.
 
-# Offense count: 6
-# Configuration parameters: EnforcedStyle.
-# SupportedStyles: link_or_button, strict
-Capybara/ClickLinkOrButtonStyle:
-  Exclude:
-    - 'spec/features/next_addition_spec.rb'
-    - 'spec/features/next_multiplication_spec.rb'
-    - 'spec/features/next_soustraction_spec.rb'
-
 # Offense count: 1
 # This cop supports safe autocorrection (--autocorrect).
 # Configuration parameters: EnforcedStyle.
 # SupportedStyles: have_no, not_to
 Capybara/NegationMatcher:
   Exclude:
-    - 'spec/features/time_session_spec.rb'
-
-# Offense count: 5
-# This cop supports safe autocorrection (--autocorrect).
-Capybara/RedundantWithinFind:
-  Exclude:
-    - 'spec/features/fight_session_spec.rb'
-    - 'spec/features/next_addition_spec.rb'
-    - 'spec/features/next_multiplication_spec.rb'
-    - 'spec/features/next_soustraction_spec.rb'
-    - 'spec/features/time_session_spec.rb'
+    - "spec/features/time_session_spec.rb"
 
 # Offense count: 1
 # This cop supports safe autocorrection (--autocorrect).
 # Configuration parameters: AllowForAlignment, AllowBeforeTrailingComments, ForceEqualSignAlignment.
 Layout/ExtraSpacing:
   Exclude:
-    - 'db/migrate/20230524172147_add_shuffle_hole_position_to_time_sessions.rb'
-
-# Offense count: 1
-# This cop supports safe autocorrection (--autocorrect).
-# Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, AllowedPatterns.
-# URISchemes: http, https
-Layout/LineLength:
-  Max: 127
+    - "db/migrate/20230524172147_add_shuffle_hole_position_to_time_sessions.rb"
 
 # Offense count: 5
 # Configuration parameters: AllowedMethods, AllowedPatterns, CountRepeatedAttributes.
@@ -61,10 +35,3 @@ Metrics/ClassLength:
 # Configuration parameters: CountComments, CountAsOne, AllowedMethods, AllowedPatterns.
 Metrics/MethodLength:
   Max: 14
-
-# Offense count: 1
-# This cop supports safe autocorrection (--autocorrect).
-# Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, AllowedPatterns.
-# URISchemes: http, https
-Layout/LineLength:
-  Max: 127
